--- a/data-garden-server/data-garden-core/data-garden-core-standard/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-standard/pom.xml
@@ -6,10 +6,17 @@
 
     <parent>
         <groupId>com.cryptoneedle.garden</groupId>
-        <artifactId>data-garden</artifactId>
+        <artifactId>data-garden-core</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-spi</artifactId>
+    <artifactId>data-garden-core-standard</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-dim</artifactId>
+        </dependency>
+    </dependencies>
 </project>
