--- a/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
@@ -6,22 +6,21 @@
 
     <parent>
         <groupId>com.cryptoneedle.garden</groupId>
-        <artifactId>data-garden</artifactId>
+        <artifactId>data-garden-core</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-common</artifactId>
+    <artifactId>data-garden-core-sync</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.bubbles.engine.common</groupId>
-            <artifactId>common-spring-boot-starter</artifactId>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-config</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-dolphin-scheduler</artifactId>
         </dependency>
     </dependencies>
 </project>
