--- a/data-garden-server/data-garden-common/pom.xml
+++ b/data-garden-server/data-garden-common/pom.xml
@@ -6,17 +6,22 @@
 
     <parent>
         <groupId>com.cryptoneedle.garden</groupId>
-        <artifactId>data-garden</artifactId>
+        <artifactId>data-garden-server</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-infrastructure</artifactId>
+    <artifactId>data-garden-common</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.bubbles.engine.data</groupId>
-            <artifactId>data-spring-boot-starter</artifactId>
+            <groupId>com.bubbles.engine.common</groupId>
+            <artifactId>common-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 </project>
