--- a/data-garden-server/data-garden-start/data-garden-start-api/pom.xml
+++ b/data-garden-server/data-garden-start/data-garden-start-api/pom.xml
@@ -13,5 +13,14 @@
 
     <artifactId>data-garden-start-api</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-sync</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-ads</artifactId>
+        </dependency>
+    </dependencies>
 </project>
