--- a/data-garden-server/data-garden-test/pom.xml
+++ b/data-garden-server/data-garden-test/pom.xml
@@ -6,17 +6,11 @@
 
     <parent>
         <groupId>com.cryptoneedle.garden</groupId>
-        <artifactId>data-garden-plugins</artifactId>
+        <artifactId>data-garden-server</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-plugins-oracle</artifactId>
+    <artifactId>data-garden-test</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc10</artifactId>
-        </dependency>
-    </dependencies>
 </project>
