--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -13,6 +13,11 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <java.version>25</java.version>
+        <project.version>1.0.0-SNAPSHOT</project.version>
+    </properties>
+
     <modules>
         <module>data-garden-common</module>
         <module>data-garden-spi</module>
@@ -20,14 +25,8 @@
         <module>data-garden-core</module>
         <module>data-garden-start</module>
         <module>data-garden-plugins</module>
+        <module>data-garden-test</module>
     </modules>
-
-    <properties>
-        <java.version>25</java.version>
-        <maven.compiler.source>25</maven.compiler.source>
-        <maven.compiler.target>25</maven.compiler.target>
-        <project.version>1.0.0-SNAPSHOT</project.version>
-    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -119,10 +118,14 @@
                 <artifactId>data-garden-start-task</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
                 <artifactId>data-garden-start-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cryptoneedle.garden</groupId>
+                <artifactId>data-garden-test</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -134,11 +137,16 @@
             </dependency>
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
-                <artifactId>ata-garden-plugins-oracle</artifactId>
+                <artifactId>data-garden-plugins-oracle</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- Other -->
+            <dependency>
+                <groupId>com.oracle.database.jdbc</groupId>
+                <artifactId>ojdbc10</artifactId>
+                <version>19.29.0.0</version>
+            </dependency>
             <dependency>
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
