--- a/data-garden-server/data-garden-core/data-garden-core-source/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-source/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-core-datasource</artifactId>
+    <artifactId>data-garden-core-source</artifactId>
 
     <dependencies>
         <dependency>
