--- a/data-garden-server/data-garden-start/data-garden-start-starter/pom.xml
+++ b/data-garden-server/data-garden-start/data-garden-start-starter/pom.xml
@@ -6,17 +6,9 @@
 
     <parent>
         <groupId>com.cryptoneedle.garden</groupId>
-        <artifactId>data-garden-server</artifactId>
+        <artifactId>data-garden-start</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-start</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>data-garden-start-starter</module>
-        <module>data-garden-start-task</module>
-        <module>data-garden-start-api</module>
-    </modules>
+    <artifactId>data-garden-start-starter</artifactId>
 </project>
