--- a/data-garden-server/data-garden-start/data-garden-start-task/pom.xml
+++ b/data-garden-server/data-garden-start/data-garden-start-task/pom.xml
@@ -16,6 +16,10 @@
     <dependencies>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-start-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
             <artifactId>data-garden-core-sync</artifactId>
         </dependency>
         <dependency>
