--- a/data-garden-server/data-garden-infrastructure/pom.xml
+++ b/data-garden-server/data-garden-infrastructure/pom.xml
@@ -22,5 +22,21 @@
             <groupId>com.bubbles.engine.data</groupId>
             <artifactId>data-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.common</groupId>
+            <artifactId>hibernate-commons-annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
