--- a/data-garden-server/data-garden-test/pom.xml
+++ b/data-garden-server/data-garden-test/pom.xml
@@ -13,4 +13,14 @@
 
     <artifactId>data-garden-test</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-start-task</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-start-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
