--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -115,7 +115,7 @@
             </dependency>
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
-                <artifactId>data-garden-start-starter</artifactId>
+                <artifactId>data-garden-start-config</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -156,6 +156,11 @@
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>9.5.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate.common</groupId>
+                <artifactId>hibernate-commons-annotations</artifactId>
+                <version>7.0.3.Final</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
