--- a/data-garden-server/data-garden-core/data-garden-core-crud/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-crud/pom.xml
@@ -8,15 +8,14 @@
         <groupId>com.cryptoneedle.garden</groupId>
         <artifactId>data-garden-core</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-core-source</artifactId>
+    <artifactId>data-garden-core-crud</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-core-crud</artifactId>
+            <artifactId>data-garden-infrastructure</artifactId>
         </dependency>
     </dependencies>
 </project>
