--- a/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-core-config</artifactId>
+            <artifactId>data-garden-core-crud</artifactId>
         </dependency>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
