--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -54,6 +54,11 @@
             </dependency>
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
+                <artifactId>data-garden-core-crud</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cryptoneedle.garden</groupId>
                 <artifactId>data-garden-core-config</artifactId>
                 <version>${project.version}</version>
             </dependency>
