--- a/data-garden-server/data-garden-start/data-garden-start-api/src/main/resources/application.yml
+++ b/data-garden-server/data-garden-start/data-garden-start-api/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   main:
     allow-bean-definition-overriding: true
-    allow-circular-references: true
+    allow-circular-references: false
   datasource:
     primary:
       url: jdbc:postgresql://${primary.host}:${primary.port}/data-garden
@@ -25,13 +25,13 @@ primary:
   username: cryptoneedle
   password: postgres
 doris:
-  enabled: fales
+  enabled: false
   host: 10.36.10.87
   port: 9030
   username: root
   password: HJD@%hd&di8473jh
 dolphin-scheduler:
-  enabled: fales
+  enabled: false
   host: 10.36.10.93
   port: 3306
   username: root
