--- a/data-garden-server/data-garden-infrastructure/pom.xml
+++ b/data-garden-server/data-garden-infrastructure/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>data-garden-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-plugins-oracle</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.bubbles.engine.data</groupId>
             <artifactId>data-spring-boot-starter</artifactId>
         </dependency>
