feat 轻量数据源SPI模块

--- a/data-garden-server/data-garden-common/pom.xml
+++ b/data-garden-server/data-garden-common/pom.xml
@@ -35,5 +35,9 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-3-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+        </dependency>
     </dependencies>
 </project>
