--- a/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
@@ -20,6 +20,10 @@
         </dependency>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-plugins-oracle</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
             <artifactId>data-garden-core-crud</artifactId>
         </dependency>
         <dependency>
