--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -153,6 +153,11 @@
 
             <!-- Other -->
             <dependency>
+                <groupId>commons-dbutils</groupId>
+                <artifactId>commons-dbutils</artifactId>
+                <version>1.8.1</version>
+            </dependency>
+            <dependency>
                 <groupId>com.oracle.database.jdbc</groupId>
                 <artifactId>ojdbc10</artifactId>
                 <version>19.29.0.0</version>
