--- a/data-garden-server/data-garden-core/pom.xml
+++ b/data-garden-server/data-garden-core/pom.xml
@@ -27,5 +27,6 @@
         <module>data-garden-core-dwd</module>
         <module>data-garden-core-dws</module>
         <module>data-garden-core-ads</module>
+        <module>data-garden-core-ai</module>
     </modules>
 </project>
