--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -112,6 +112,11 @@
                 <artifactId>data-garden-core-ads</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.cryptoneedle.garden</groupId>
+                <artifactId>data-garden-core-ai</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
@@ -133,6 +138,12 @@
                 <artifactId>data-garden-start-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.cryptoneedle.garden</groupId>
+                <artifactId>data-garden-start-ai</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
                 <artifactId>data-garden-test</artifactId>
@@ -171,6 +182,14 @@
                 <groupId>org.hibernate.common</groupId>
                 <artifactId>hibernate-commons-annotations</artifactId>
                 <version>7.0.3.Final</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-bom</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
