--- a/data-garden-server/data-garden-core/data-garden-core-ai/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-ai/pom.xml
@@ -14,5 +14,9 @@
     <artifactId>data-garden-core-ai</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-ads</artifactId>
+        </dependency>
     </dependencies>
 </project>
