--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>25</java.version>
         <project.version>1.0.0-SNAPSHOT</project.version>
+        <spring.ai>2.0.0-SNAPSHOT</spring.ai>
     </properties>
 
     <modules>
@@ -187,7 +188,7 @@
             <dependency>
                 <groupId>org.springframework.ai</groupId>
                 <artifactId>spring-ai-bom</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>${spring.ai}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
