--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -113,11 +113,6 @@
                 <artifactId>data-garden-core-ads</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.cryptoneedle.garden</groupId>
-                <artifactId>data-garden-core-ai</artifactId>
-                <version>${project.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
@@ -137,11 +132,6 @@
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
                 <artifactId>data-garden-start-api</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.cryptoneedle.garden</groupId>
-                <artifactId>data-garden-start-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -194,6 +184,17 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
