--- a/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-sync/pom.xml
@@ -16,15 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-spi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-plugins-oracle</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-core-crud</artifactId>
+            <artifactId>data-garden-core-source</artifactId>
         </dependency>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
