--- a/data-garden-server/data-garden-start/pom.xml
+++ b/data-garden-server/data-garden-start/pom.xml
@@ -19,4 +19,11 @@
         <module>data-garden-start-task</module>
         <module>data-garden-start-api</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-ads</artifactId>
+        </dependency>
+    </dependencies>
 </project>
