--- a/data-garden-server/data-garden-core/data-garden-core-doris/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-doris/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-core-source</artifactId>
+            <artifactId>data-garden-core-sync</artifactId>
         </dependency>
     </dependencies>
 </project>
