--- a/data-garden-server/data-garden-plugins/pom.xml
+++ b/data-garden-server/data-garden-plugins/pom.xml
@@ -17,4 +17,11 @@
     <modules>
         <module>data-garden-plugins-oracle</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-spi</artifactId>
+        </dependency>
+    </dependencies>
 </project>
