feat 连接数据库所使用的隧道工具

--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -191,6 +191,11 @@
                 <artifactId>hibernate-commons-annotations</artifactId>
                 <version>7.0.3.Final</version>
             </dependency>
+            <dependency>
+                <groupId>com.hierynomus</groupId>
+                <artifactId>sshj</artifactId>
+                <version>0.40.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
