feat 数据库支持SSH连接

--- a/data-garden-server/data-garden-spi/pom.xml
+++ b/data-garden-server/data-garden-spi/pom.xml
@@ -18,5 +18,9 @@
             <groupId>com.cryptoneedle.garden</groupId>
             <artifactId>data-garden-infrastructure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hierynomus</groupId>
+            <artifactId>sshj</artifactId>
+        </dependency>
     </dependencies>
 </project>
