--- a/data-garden-server/data-garden-core/data-garden-core-crud/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-crud/pom.xml
@@ -17,5 +17,9 @@
             <groupId>com.cryptoneedle.garden</groupId>
             <artifactId>data-garden-spi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-plugins-oracle</artifactId>
+        </dependency>
     </dependencies>
 </project>
