--- a/data-garden-server/data-garden-start/pom.xml
+++ b/data-garden-server/data-garden-start/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-core-ads</artifactId>
+            <artifactId>data-garden-core-dolphin-scheduler</artifactId>
         </dependency>
     </dependencies>
 </project>
