--- a/data-garden-server/data-garden-spi/pom.xml
+++ b/data-garden-server/data-garden-spi/pom.xml
@@ -22,5 +22,9 @@
             <groupId>com.hierynomus</groupId>
             <artifactId>sshj</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+        </dependency>
     </dependencies>
 </project>
