feat 增加数仓各个分层的同步

--- a/data-garden-server/data-garden-core/data-garden-core-mapping/pom.xml
+++ b/data-garden-server/data-garden-core/data-garden-core-mapping/pom.xml
@@ -11,12 +11,12 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>data-garden-core-dwd</artifactId>
+    <artifactId>data-garden-core-mapping</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.cryptoneedle.garden</groupId>
-            <artifactId>data-garden-core-mapping</artifactId>
+            <artifactId>data-garden-core-ods</artifactId>
         </dependency>
     </dependencies>
 </project>
