--- a/data-garden-server/pom.xml
+++ b/data-garden-server/pom.xml
@@ -122,6 +122,11 @@
             </dependency>
             <dependency>
                 <groupId>com.cryptoneedle.garden</groupId>
+                <artifactId>data-garden-core-mapping</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cryptoneedle.garden</groupId>
                 <artifactId>data-garden-core-dws</artifactId>
                 <version>${project.version}</version>
             </dependency>
