--- a/data-garden-server/data-garden-common/pom.xml
+++ b/data-garden-server/data-garden-common/pom.xml
@@ -39,5 +39,9 @@
             <groupId>commons-dbutils</groupId>
             <artifactId>commons-dbutils</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
     </dependencies>
 </project>
