--- a/data-garden-server/data-garden-ai/pom.xml
+++ b/data-garden-server/data-garden-ai/pom.xml
@@ -19,6 +19,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.cryptoneedle.garden</groupId>
+            <artifactId>data-garden-core-ads</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.bubbles.engine.common</groupId>
             <artifactId>common-core</artifactId>
             <version>3.5.7.1</version>
